--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ about:
   home: 'https://keplerproject.github.io/luafilesystem/'
   license: MIT/X11
   license_family: MIT
-  #license_file: COPYING 
+  license_file: LICENSE 
   summary: 'File System Library for the Lua Programming Language'
   description: |
        LuaFileSystem is a Lua library developed to complement the set of 
