--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 16d17c788b8093f2047325343f5e9b74cccb1ea96001e45914a58bbae8932495
 
 build:
-  number: 0
+  number: 1
   ## osx lua build is broken, see https://github.com/conda-forge/lua-feedstock/pull/40
   skip: true  # [not linux]
   rpaths:
@@ -20,6 +20,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
+    - {{ stdlib('c') }}
   host:
     - luarocks
     - zlib
